[gd_scene load_steps=15 format=4 uid="uid://dmuwm5lh5nlnh"]

[ext_resource type="Script" path="res://scenes/Ui/options_menu.gd" id="1_yd5ev"]
[ext_resource type="TileSet" uid="uid://sadrv0lwwkef" path="res://resources/tilesets/tileset_for_menu_screens.tres" id="2_toaym"]
[ext_resource type="PackedScene" uid="uid://bsr284cx0o2lt" path="res://scenes/Ui/vignette.tscn" id="2_y3r0o"]
[ext_resource type="PackedScene" uid="uid://bio16yutlh531" path="res://scenes/Ui/animated_label.tscn" id="4_586t1"]
[ext_resource type="Texture2D" uid="uid://bfttx1pko8lfa" path="res://assets/monsters/Wizard/Wizard.png" id="4_wcbnx"]
[ext_resource type="PackedScene" uid="uid://pg6jic4xnaw1" path="res://scenes/Ui/sound_button.tscn" id="5_ps45w"]
[ext_resource type="Theme" uid="uid://bmh7oa1jgdg2c" path="res://resources/theme/theme.tres" id="6_vx5g5"]
[ext_resource type="PackedScene" uid="uid://dkjvpc2spqcpc" path="res://scenes/Component/RandomStreamPlayerComponent/random_stream_player_component.tscn" id="8_yn0ed"]
[ext_resource type="AudioStream" uid="uid://cj6dh4gmqh5x5" path="res://assets/audio/sfx/exp_pick_up/exp_pickup_1.wav" id="9_2xqmy"]
[ext_resource type="AudioStream" uid="uid://b3ibwn6c56frw" path="res://assets/audio/sfx/exp_pick_up/exp_pickup_2.wav" id="10_qhico"]
[ext_resource type="AudioStream" uid="uid://dq5o2ju63v0jy" path="res://assets/audio/sfx/exp_pick_up/exp_pickup_3.wav" id="11_eqgfv"]
[ext_resource type="AudioStream" uid="uid://bbs3uourggnq0" path="res://assets/audio/sfx/exp_pick_up/exp_pickup_4.wav" id="12_uc3i3"]
[ext_resource type="AudioStream" uid="uid://c4m7fe4u8854s" path="res://assets/audio/sfx/exp_pick_up/exp_pickup_5.wav" id="13_adscb"]
[ext_resource type="AudioStream" uid="uid://cqgacsc0pwawm" path="res://assets/audio/sfx/exp_pick_up/exp_pickup_6.wav" id="14_jcnmx"]

[node name="OptionsMenu" type="CanvasLayer"]
layer = 2
script = ExtResource("1_yd5ev")

[node name="BackTileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABABUAAgAGAAEAAAADABUAAgAGAAEAAAAFABUAAgAGAAEAAAAHABUAAgAGAAEAAAAJABUAAgAGAAEAAAAKABUAAgAGAAEAAAALABUAAgAGAAEAAAAMABUAAgAGAAEAAAANABUAAgAGAAEAAAAOABUAAgAGAAEAAAAPABUAAgAGAAEAAAAQABUAAgAGAAEAAAARABUAAgAGAAEAAAASABUAAgAGAAEAAAATABUAAgAGAAEAAAAUABUAAgAGAAEAAAAVABUAAgAGAAEAAAAWABUAAgAGAAEAAAAXABUAAgAGAAEAAAAYABUAAgAGAAEAAAAZABUAAgAGAAEAAAAaABUAAgAGAAEAAAAbABUAAgAGAAEAAAAcABUAAgAGAAEAAAAdABUAAgAGAAEAAAAeABUAAgAGAAEAAAAfABUAAgAGAAEAAAAgABUAAgAGAAEAAAAhABUAAgAGAAEAAAAiABUAAgAGAAEAAAAjABUAAgAGAAEAAAAkABUAAgAGAAEAAAAlABUAAgAGAAEAAAAmABUAAgAGAAEAAAAnABUAAgAGAAEAAAAAABcAAgAGAAEAAAABABcAAgAGAAEAAAACABcAAgAGAAEAAAADABcAAgAGAAEAAAAEABcAAgAGAAEAAAAFABcAAgAGAAEAAAAGABcAAgAGAAEAAAAHABcAAgAGAAEAAAAIABcAAgAGAAEAAAAJABcAAgAGAAEAAAAKABcAAgAGAAEAAAALABcAAgAGAAEAAAAMABcAAgAGAAEAAAANABcAAgAGAAEAAAAOABcAAgAGAAEAAAAPABcAAgAGAAEAAAAQABcAAgAGAAEAAAARABcAAgAGAAEAAAASABcAAgAGAAEAAAATABcAAgAGAAEAAAAUABcAAgAGAAEAAAAVABcAAgAGAAEAAAAWABcAAgAGAAEAAAAXABcAAgAGAAEAAAAYABcAAgAGAAEAAAAZABcAAgAGAAEAAAAaABcAAgAGAAEAAAAbABcAAgAGAAEAAAAcABcAAgAGAAEAAAAdABcAAgAGAAEAAAAeABcAAgAGAAEAAAAfABcAAgAGAAEAAAAgABcAAgAGAAEAAAAhABcAAgAGAAEAAAAiABcAAgAGAAEAAAAjABcAAgAGAAEAAAAkABcAAgAGAAEAAAAlABcAAgAGAAEAAAAmABcAAgAGAAEAAAAnABcAAgAGAAEAAAABABMAAgAGAAEAAAACABMAAgAGAAEAAAADABMAAgAGAAEAAAAEABMAAgAGAAEAAAAFABMAAgAGAAEAAAAGABMAAgAGAAEAAAAHABMAAgAGAAEAAAAIABMAAgAGAAEAAAAJABMAAgAGAAEAAAAKABMAAgAGAAEAAAALABMAAgAGAAEAAAAMABMAAgAGAAEAAAANABMAAgAGAAEAAAAOABMAAgAGAAEAAAAPABMAAgAGAAEAAAAQABMAAgAGAAEAAAARABMAAgAGAAEAAAASABMAAgAGAAEAAAATABMAAgAGAAEAAAAUABMAAgAGAAEAAAAVABMAAgAGAAEAAAAWABMAAgAGAAEAAAAXABMAAgAGAAEAAAAYABMAAgAGAAEAAAAZABMAAgAGAAEAAAAaABMAAgAGAAEAAAAbABMAAgAGAAEAAAAcABMAAgAGAAEAAAAdABMAAgAGAAEAAAAeABMAAgAGAAEAAAAfABMAAgAGAAEAAAAgABMAAgAGAAEAAAAhABMAAgAGAAEAAAAiABMAAgAGAAEAAAAjABMAAgAGAAEAAAAkABMAAgAGAAEAAAAlABMAAgAGAAEAAAAmABMAAgAGAAEAAAAnABMAAgAGAAEAAAABAAUAAgAGAAEAAAABAAYAAgAGAAEAAAABAAcAAgAGAAEAAAABAAgAAgAGAAEAAAABAAkAAgAGAAEAAAABAAoAAgAGAAEAAAABAAsAAgAGAAEAAAABAAwAAgAGAAEAAAABAA0AAgAGAAEAAAABAA4AAgAGAAEAAAABAA8AAgAGAAEAAAABABAAAgAGAAEAAAABABEAAgAGAAEAAAABABIAAgAGAAEAAAACAAUAAgAGAAEAAAACAAYAAgAGAAEAAAACAAcAAgAGAAEAAAACAAgAAgAGAAEAAAACAAkAAgAGAAEAAAACAAoAAgAGAAEAAAACAAsAAgAGAAEAAAACAAwAAgAGAAEAAAACAA0AAgAGAAEAAAACAA4AAgAGAAEAAAACAA8AAgAGAAEAAAACABAAAgAGAAEAAAACABEAAgAGAAEAAAACABIAAgAGAAEAAAADAAUAAgAGAAEAAAADAAYAAgAGAAEAAAADAAcAAgAGAAEAAAADAAgAAgAGAAEAAAADAAkAAgAGAAEAAAADAAoAAgAGAAEAAAADAAsAAgAGAAEAAAADAAwAAgAGAAEAAAADAA0AAgAGAAEAAAADAA4AAgAGAAEAAAADAA8AAgAGAAEAAAADABAAAgAGAAEAAAADABEAAgAGAAEAAAADABIAAgAGAAEAAAAEAAUAAgAGAAEAAAAEAAYAAgAGAAEAAAAEAAcAAgAGAAEAAAAEAAgAAgAGAAEAAAAEAAkAAgAGAAEAAAAEAAoAAgAGAAEAAAAEAAsAAgAGAAEAAAAEAAwAAgAGAAEAAAAEAA0AAgAGAAEAAAAEAA4AAgAGAAEAAAAEAA8AAgAGAAEAAAAEABAAAgAGAAEAAAAEABEAAgAGAAEAAAAEABIAAgAGAAEAAAAFAAUAAgAGAAEAAAAFAAYAAgAGAAEAAAAFAAcAAgAGAAEAAAAFAAgAAgAGAAEAAAAFAAkAAgAGAAEAAAAFAAoAAgAGAAEAAAAFAAsAAgAGAAEAAAAFAAwAAgAGAAEAAAAFAA0AAgAGAAEAAAAFAA4AAgAGAAEAAAAFAA8AAgAGAAEAAAAFABAAAgAGAAEAAAAFABEAAgAGAAEAAAAFABIAAgAGAAEAAAAGAAUAAgAGAAEAAAAGAAYAAgAGAAEAAAAGAAcAAgAGAAEAAAAGAAgAAgAGAAEAAAAGAAkAAgAGAAEAAAAGAAoAAgAGAAEAAAAGAAsAAgAGAAEAAAAGAAwAAgAGAAEAAAAGAA0AAgAGAAEAAAAGAA4AAgAGAAEAAAAGAA8AAgAGAAEAAAAGABAAAgAGAAEAAAAGABEAAgAGAAEAAAAGABIAAgAGAAEAAAAHAAUAAgAGAAEAAAAHAAYAAgAGAAEAAAAHAAcAAgAGAAEAAAAHAAgAAgAGAAEAAAAHAAkAAgAGAAEAAAAHAAoAAgAGAAEAAAAHAAsAAgAGAAEAAAAHAAwAAgAGAAEAAAAHAA0AAgAGAAEAAAAHAA4AAgAGAAEAAAAHAA8AAgAGAAEAAAAHABAAAgAGAAEAAAAHABEAAgAGAAEAAAAHABIAAgAGAAEAAAAIAAUAAgAGAAEAAAAIAAYAAgAGAAEAAAAIAAcAAgAGAAEAAAAIAAgAAgAGAAEAAAAIAAkAAgAGAAEAAAAIAAoAAgAGAAEAAAAIAAsAAgAGAAEAAAAIAAwAAgAGAAEAAAAIAA0AAgAGAAEAAAAIAA4AAgAGAAEAAAAIAA8AAgAGAAEAAAAIABAAAgAGAAEAAAAIABEAAgAGAAEAAAAIABIAAgAGAAEAAAAJAAUAAgAGAAEAAAAJAAYAAgAGAAEAAAAJAAcAAgAGAAEAAAAJAAgAAgAGAAEAAAAJAAkAAgAGAAEAAAAJAAoAAgAGAAEAAAAJAAsAAgAGAAEAAAAJAAwAAgAGAAEAAAAJAA0AAgAGAAEAAAAJAA4AAgAGAAEAAAAJAA8AAgAGAAEAAAAJABAAAgAGAAEAAAAJABEAAgAGAAEAAAAJABIAAgAGAAEAAAAKAAUAAgAGAAEAAAAKAAYAAgAGAAEAAAAKAAcAAgAGAAEAAAAKAAgAAgAGAAEAAAAKAAkAAgAGAAEAAAAKAAoAAgAGAAEAAAAKAAsAAgAGAAEAAAAKAAwAAgAGAAEAAAAKAA0AAgAGAAEAAAAKAA4AAgAGAAEAAAAKAA8AAgAGAAEAAAAKABAAAgAGAAEAAAAKABEAAgAGAAEAAAAKABIAAgAGAAEAAAALAAUAAgAGAAEAAAALAAYAAgAGAAEAAAALAAcAAgAGAAEAAAALAAgAAgAGAAEAAAALAAkAAgAGAAEAAAALAAoAAgAGAAEAAAALAAsAAgAGAAEAAAALAAwAAgAGAAEAAAALAA0AAgAGAAEAAAALAA4AAgAGAAEAAAALAA8AAgAGAAEAAAALABAAAgAGAAEAAAALABEAAgAGAAEAAAALABIAAgAGAAEAAAAMAAUAAgAGAAEAAAAMAAYAAgAGAAEAAAAMAAcAAgAGAAEAAAAMAAgAAgAGAAEAAAAMAAkAAgAGAAEAAAAMAAoAAgAGAAEAAAAMAAsAAgAGAAEAAAAMAAwAAgAGAAEAAAAMAA0AAgAGAAEAAAAMAA4AAgAGAAEAAAAMAA8AAgAGAAEAAAAMABAAAgAGAAEAAAAMABEAAgAGAAEAAAAMABIAAgAGAAEAAAANAAUAAgAGAAEAAAANAAYAAgAGAAEAAAANAAcAAgAGAAEAAAANAAgAAgAGAAEAAAANAAkAAgAGAAEAAAANAAoAAgAGAAEAAAANAAsAAgAGAAEAAAANAAwAAgAGAAEAAAANAA0AAgAGAAEAAAANAA4AAgAGAAEAAAANAA8AAgAGAAEAAAANABAAAgAGAAEAAAANABEAAgAGAAEAAAANABIAAgAGAAEAAAAOAAUAAgAGAAEAAAAOAAYAAgAGAAEAAAAOAAcAAgAGAAEAAAAOAAgAAgAGAAEAAAAOAAkAAgAGAAEAAAAOAAoAAgAGAAEAAAAOAAsAAgAGAAEAAAAOAAwAAgAGAAEAAAAOAA0AAgAGAAEAAAAOAA4AAgAGAAEAAAAOAA8AAgAGAAEAAAAOABAAAgAGAAEAAAAOABEAAgAGAAEAAAAOABIAAgAGAAEAAAAPAAUAAgAGAAEAAAAPAAYAAgAGAAEAAAAPAAcAAgAGAAEAAAAPAAgAAgAGAAEAAAAPAAkAAgAGAAEAAAAPAAoAAgAGAAEAAAAPAAsAAgAGAAEAAAAPAAwAAgAGAAEAAAAPAA0AAgAGAAEAAAAPAA4AAgAGAAEAAAAPAA8AAgAGAAEAAAAPABAAAgAGAAEAAAAPABEAAgAGAAEAAAAPABIAAgAGAAEAAAAQAAUAAgAGAAEAAAAQAAYAAgAGAAEAAAAQAAcAAgAGAAEAAAAQAAgAAgAGAAEAAAAQAAkAAgAGAAEAAAAQAAoAAgAGAAEAAAAQAAsAAgAGAAEAAAAQAAwAAgAGAAEAAAAQAA0AAgAGAAEAAAAQAA4AAgAGAAEAAAAQAA8AAgAGAAEAAAAQABAAAgAGAAEAAAAQABEAAgAGAAEAAAAQABIAAgAGAAEAAAARAAUAAgAGAAEAAAARAAYAAgAGAAEAAAARAAcAAgAGAAEAAAARAAgAAgAGAAEAAAARAAkAAgAGAAEAAAARAAoAAgAGAAEAAAARAAsAAgAGAAEAAAARAAwAAgAGAAEAAAARAA0AAgAGAAEAAAARAA4AAgAGAAEAAAARAA8AAgAGAAEAAAARABAAAgAGAAEAAAARABEAAgAGAAEAAAARABIAAgAGAAEAAAASAAUAAgAGAAEAAAASAAYAAgAGAAEAAAASAAcAAgAGAAEAAAASAAgAAgAGAAEAAAASAAkAAgAGAAEAAAASAAoAAgAGAAEAAAASAAsAAgAGAAEAAAASAAwAAgAGAAEAAAASAA0AAgAGAAEAAAASAA4AAgAGAAEAAAASAA8AAgAGAAEAAAASABAAAgAGAAEAAAASABEAAgAGAAEAAAASABIAAgAGAAEAAAATAAUAAgAGAAEAAAATAAYAAgAGAAEAAAATAAcAAgAGAAEAAAATAAgAAgAGAAEAAAATAAkAAgAGAAEAAAATAAoAAgAGAAEAAAATAAsAAgAGAAEAAAATAAwAAgAGAAEAAAATAA0AAgAGAAEAAAATAA4AAgAGAAEAAAATAA8AAgAGAAEAAAATABAAAgAGAAEAAAATABEAAgAGAAEAAAATABIAAgAGAAEAAAAUAAUAAgAGAAEAAAAUAAYAAgAGAAEAAAAUAAcAAgAGAAEAAAAUAAgAAgAGAAEAAAAUAAkAAgAGAAEAAAAUAAoAAgAGAAEAAAAUAAsAAgAGAAEAAAAUAAwAAgAGAAEAAAAUAA0AAgAGAAEAAAAUAA4AAgAGAAEAAAAUAA8AAgAGAAEAAAAUABAAAgAGAAEAAAAUABEAAgAGAAEAAAAUABIAAgAGAAEAAAAVAAUAAgAGAAEAAAAVAAYAAgAGAAEAAAAVAAcAAgAGAAEAAAAVAAgAAgAGAAEAAAAVAAkAAgAGAAEAAAAVAAoAAgAGAAEAAAAVAAsAAgAGAAEAAAAVAAwAAgAGAAEAAAAVAA0AAgAGAAEAAAAVAA4AAgAGAAEAAAAVAA8AAgAGAAEAAAAVABAAAgAGAAEAAAAVABEAAgAGAAEAAAAVABIAAgAGAAEAAAAWAAUAAgAGAAEAAAAWAAYAAgAGAAEAAAAWAAcAAgAGAAEAAAAWAAgAAgAGAAEAAAAWAAkAAgAGAAEAAAAWAAoAAgAGAAEAAAAWAAsAAgAGAAEAAAAWAAwAAgAGAAEAAAAWAA0AAgAGAAEAAAAWAA4AAgAGAAEAAAAWAA8AAgAGAAEAAAAWABAAAgAGAAEAAAAWABEAAgAGAAEAAAAWABIAAgAGAAEAAAAXAAUAAgAGAAEAAAAXAAYAAgAGAAEAAAAXAAcAAgAGAAEAAAAXAAgAAgAGAAEAAAAXAAkAAgAGAAEAAAAXAAoAAgAGAAEAAAAXAAsAAgAGAAEAAAAXAAwAAgAGAAEAAAAXAA0AAgAGAAEAAAAXAA4AAgAGAAEAAAAXAA8AAgAGAAEAAAAXABAAAgAGAAEAAAAXABEAAgAGAAEAAAAXABIAAgAGAAEAAAAYAAUAAgAGAAEAAAAYAAYAAgAGAAEAAAAYAAcAAgAGAAEAAAAYAAgAAgAGAAEAAAAYAAkAAgAGAAEAAAAYAAoAAgAGAAEAAAAYAAsAAgAGAAEAAAAYAAwAAgAGAAEAAAAYAA0AAgAGAAEAAAAYAA4AAgAGAAEAAAAYAA8AAgAGAAEAAAAYABAAAgAGAAEAAAAYABEAAgAGAAEAAAAYABIAAgAGAAEAAAAZAAUAAgAGAAEAAAAZAAYAAgAGAAEAAAAZAAcAAgAGAAEAAAAZAAgAAgAGAAEAAAAZAAkAAgAGAAEAAAAZAAoAAgAGAAEAAAAZAAsAAgAGAAEAAAAZAAwAAgAGAAEAAAAZAA0AAgAGAAEAAAAZAA4AAgAGAAEAAAAZAA8AAgAGAAEAAAAZABAAAgAGAAEAAAAZABEAAgAGAAEAAAAZABIAAgAGAAEAAAAaAAUAAgAGAAEAAAAaAAYAAgAGAAEAAAAaAAcAAgAGAAEAAAAaAAgAAgAGAAEAAAAaAAkAAgAGAAEAAAAaAAoAAgAGAAEAAAAaAAsAAgAGAAEAAAAaAAwAAgAGAAEAAAAaAA0AAgAGAAEAAAAaAA4AAgAGAAEAAAAaAA8AAgAGAAEAAAAaABAAAgAGAAEAAAAaABEAAgAGAAEAAAAaABIAAgAGAAEAAAAbAAUAAgAGAAEAAAAbAAYAAgAGAAEAAAAbAAcAAgAGAAEAAAAbAAgAAgAGAAEAAAAbAAkAAgAGAAEAAAAbAAoAAgAGAAEAAAAbAAsAAgAGAAEAAAAbAAwAAgAGAAEAAAAbAA0AAgAGAAEAAAAbAA4AAgAGAAEAAAAbAA8AAgAGAAEAAAAbABAAAgAGAAEAAAAbABEAAgAGAAEAAAAbABIAAgAGAAEAAAAcAAUAAgAGAAEAAAAcAAYAAgAGAAEAAAAcAAcAAgAGAAEAAAAcAAgAAgAGAAEAAAAcAAkAAgAGAAEAAAAcAAoAAgAGAAEAAAAcAAsAAgAGAAEAAAAcAAwAAgAGAAEAAAAcAA0AAgAGAAEAAAAcAA4AAgAGAAEAAAAcAA8AAgAGAAEAAAAcABAAAgAGAAEAAAAcABEAAgAGAAEAAAAcABIAAgAGAAEAAAAdAAUAAgAGAAEAAAAdAAYAAgAGAAEAAAAdAAcAAgAGAAEAAAAdAAgAAgAGAAEAAAAdAAkAAgAGAAEAAAAdAAoAAgAGAAEAAAAdAAsAAgAGAAEAAAAdAAwAAgAGAAEAAAAdAA0AAgAGAAEAAAAdAA4AAgAGAAEAAAAdAA8AAgAGAAEAAAAdABAAAgAGAAEAAAAdABEAAgAGAAEAAAAdABIAAgAGAAEAAAAeAAUAAgAGAAEAAAAeAAYAAgAGAAEAAAAeAAcAAgAGAAEAAAAeAAgAAgAGAAEAAAAeAAkAAgAGAAEAAAAeAAoAAgAGAAEAAAAeAAsAAgAGAAEAAAAeAAwAAgAGAAEAAAAeAA0AAgAGAAEAAAAeAA4AAgAGAAEAAAAeAA8AAgAGAAEAAAAeABAAAgAGAAEAAAAeABEAAgAGAAEAAAAeABIAAgAGAAEAAAAfAAUAAgAGAAEAAAAfAAYAAgAGAAEAAAAfAAcAAgAGAAEAAAAfAAgAAgAGAAEAAAAfAAkAAgAGAAEAAAAfAAoAAgAGAAEAAAAfAAsAAgAGAAEAAAAfAAwAAgAGAAEAAAAfAA0AAgAGAAEAAAAfAA4AAgAGAAEAAAAfAA8AAgAGAAEAAAAfABAAAgAGAAEAAAAfABEAAgAGAAEAAAAfABIAAgAGAAEAAAAgAAUAAgAGAAEAAAAgAAYAAgAGAAEAAAAgAAcAAgAGAAEAAAAgAAgAAgAGAAEAAAAgAAkAAgAGAAEAAAAgAAoAAgAGAAEAAAAgAAsAAgAGAAEAAAAgAAwAAgAGAAEAAAAgAA0AAgAGAAEAAAAgAA4AAgAGAAEAAAAgAA8AAgAGAAEAAAAgABAAAgAGAAEAAAAgABEAAgAGAAEAAAAgABIAAgAGAAEAAAAhAAUAAgAGAAEAAAAhAAYAAgAGAAEAAAAhAAcAAgAGAAEAAAAhAAgAAgAGAAEAAAAhAAkAAgAGAAEAAAAhAAoAAgAGAAEAAAAhAAsAAgAGAAEAAAAhAAwAAgAGAAEAAAAhAA0AAgAGAAEAAAAhAA4AAgAGAAEAAAAhAA8AAgAGAAEAAAAhABAAAgAGAAEAAAAhABEAAgAGAAEAAAAhABIAAgAGAAEAAAAiAAUAAgAGAAEAAAAiAAYAAgAGAAEAAAAiAAcAAgAGAAEAAAAiAAgAAgAGAAEAAAAiAAkAAgAGAAEAAAAiAAoAAgAGAAEAAAAiAAsAAgAGAAEAAAAiAAwAAgAGAAEAAAAiAA0AAgAGAAEAAAAiAA4AAgAGAAEAAAAiAA8AAgAGAAEAAAAiABAAAgAGAAEAAAAiABEAAgAGAAEAAAAiABIAAgAGAAEAAAAjAAUAAgAGAAEAAAAjAAYAAgAGAAEAAAAjAAcAAgAGAAEAAAAjAAgAAgAGAAEAAAAjAAkAAgAGAAEAAAAjAAoAAgAGAAEAAAAjAAsAAgAGAAEAAAAjAAwAAgAGAAEAAAAjAA0AAgAGAAEAAAAjAA4AAgAGAAEAAAAjAA8AAgAGAAEAAAAjABAAAgAGAAEAAAAjABEAAgAGAAEAAAAjABIAAgAGAAEAAAAkAAUAAgAGAAEAAAAkAAYAAgAGAAEAAAAkAAcAAgAGAAEAAAAkAAgAAgAGAAEAAAAkAAkAAgAGAAEAAAAkAAoAAgAGAAEAAAAkAAsAAgAGAAEAAAAkAAwAAgAGAAEAAAAkAA0AAgAGAAEAAAAkAA4AAgAGAAEAAAAkAA8AAgAGAAEAAAAkABAAAgAGAAEAAAAkABEAAgAGAAEAAAAkABIAAgAGAAEAAAAlAAUAAgAGAAEAAAAlAAYAAgAGAAEAAAAlAAcAAgAGAAEAAAAlAAgAAgAGAAEAAAAlAAkAAgAGAAEAAAAlAAoAAgAGAAEAAAAlAAsAAgAGAAEAAAAlAAwAAgAGAAEAAAAlAA0AAgAGAAEAAAAlAA4AAgAGAAEAAAAlAA8AAgAGAAEAAAAlABAAAgAGAAEAAAAlABEAAgAGAAEAAAAlABIAAgAGAAEAAAAmAAUAAgAGAAEAAAAmAAYAAgAGAAEAAAAmAAcAAgAGAAEAAAAmAAgAAgAGAAEAAAAmAAkAAgAGAAEAAAAmAAoAAgAGAAEAAAAmAAsAAgAGAAEAAAAmAAwAAgAGAAEAAAAmAA0AAgAGAAEAAAAmAA4AAgAGAAEAAAAmAA8AAgAGAAEAAAAmABAAAgAGAAEAAAAmABEAAgAGAAEAAAAmABIAAgAGAAEAAAAnAAUAAgAGAAEAAAAnAAYAAgAGAAEAAAAnAAcAAgAGAAEAAAAnAAgAAgAGAAEAAAAnAAkAAgAGAAEAAAAnAAoAAgAGAAEAAAAnAAsAAgAGAAEAAAAnAAwAAgAGAAEAAAAnAA0AAgAGAAEAAAAnAA4AAgAGAAEAAAAnAA8AAgAGAAEAAAAnABAAAgAGAAEAAAAnABEAAgAGAAEAAAAnABIAAgAGAAEAAAAAAA0AAgAGAAEAAAAAAA4AAgAGAAEAAAAAAA8AAgAGAAEAAAAAABAAAgAGAAEAAAAAABEAAgAGAAEAAAAAABIAAgAGAAEAAAAAABQAAgAGAAEAAAAAABUAAgAGAAEAAAAAAAwAAgAGAAEAAAAAAAsAAgAGAAEAAAAAAAoAAgAGAAEAAAAAAAkAAgAGAAEAAAAAAAgAAgAGAAEAAAAAAAcAAgAGAAEAAAAAAAYAAgAGAAEAAAAAAAUAAgAGAAEAAAAAAAAAAgAEAAAAAAACAAAAAgAEAAAAAAACAAEAAgAEAAAAAAADAAAAAgAEAAAAAAADAAEAAgAEAAAAAAAEAAAAAgAEAAAAAAAEAAEAAgAEAAAAAAAFAAAAAgAEAAAAAAAFAAEAAgAEAAAAAAAGAAAAAgAEAAAAAAAGAAEAAgAEAAAAAAAHAAAAAgAEAAAAAAAHAAEAAgAEAAAAAAAIAAAAAgAEAAAAAAAIAAEAAgAEAAAAAAAJAAAAAgAEAAAAAAAJAAEAAgAEAAAAAAAKAAAAAgAEAAAAAAAKAAEAAgAEAAAAAAALAAAAAgAEAAAAAAALAAEAAgAEAAAAAAAMAAAAAgAEAAAAAAAMAAEAAgAEAAAAAAANAAAAAgAEAAAAAAANAAEAAgAEAAAAAAAOAAAAAgAEAAAAAAAOAAEAAgAEAAAAAAAYAAAAAgAEAAAAAAAYAAEAAgAEAAAAAAAZAAAAAgAEAAAAAAAZAAEAAgAEAAAAAAAaAAAAAgAEAAAAAAAaAAEAAgAEAAAAAAAbAAAAAgAEAAAAAAAbAAEAAgAEAAAAAAAcAAAAAgAEAAAAAAAcAAEAAgAEAAAAAAAdAAAAAgAEAAAAAAAdAAEAAgAEAAAAAAAeAAAAAgAEAAAAAAAeAAEAAgAEAAAAAAAfAAAAAgAEAAAAAAAfAAEAAgAEAAAAAAAgAAAAAgAEAAAAAAAgAAEAAgAEAAAAAAAhAAAAAgAEAAAAAAAhAAEAAgAEAAAAAAAiAAAAAgAEAAAAAAAiAAEAAgAEAAAAAAAjAAAAAgAEAAAAAAAjAAEAAgAEAAAAAAAlAAAAAgAEAAAAAAAlAAEAAgAEAAAAAAAmAAAAAgAEAAAAAAAmAAEAAgAEAAAAAAAnAAAAAgAEAAAAAAAnAAEAAgAEAAAAAAAAAAEAAgAEAAAAAAAAAAIAAgAEAAAAAAABAAIAAgAEAAAAAAACAAIAAgAEAAAAAAADAAIAAgAEAAAAAAAEAAIAAgAEAAAAAAAFAAIAAgAEAAAAAAAGAAIAAgAEAAAAAAAHAAIAAgAEAAAAAAAIAAIAAgAEAAAAAAAJAAIAAgAEAAAAAAAKAAIAAgAEAAAAAAALAAIAAgAEAAAAAAAMAAIAAgAEAAAAAAANAAIAAgAEAAAAAAAOAAIAAgAEAAAAAAAYAAIAAgAEAAAAAAAZAAIAAgAEAAAAAAAaAAIAAgAEAAAAAAAbAAIAAgAEAAAAAAAcAAIAAgAEAAAAAAAdAAIAAgAEAAAAAAAeAAIAAgAEAAAAAAAfAAIAAgAEAAAAAAAgAAIAAgAEAAAAAAAhAAIAAgAEAAAAAAAiAAIAAgAEAAAAAAAjAAIAAgAEAAAAAAAkAAIAAgAEAAAAAAAlAAIAAgAEAAAAAAAnAAIAAgAEAAAAAAAPAAAAAgAEAAAAAAAPAAEAAgAEAAAAAAAQAAAAAgAEAAAAAAAQAAEAAgAEAAAAAAARAAAAAgAEAAAAAAARAAEAAgAEAAAAAAASAAAAAgAEAAAAAAASAAEAAgAEAAAAAAATAAAAAgAEAAAAAAATAAEAAgAEAAAAAAAUAAAAAgAEAAAAAAAUAAEAAgAEAAAAAAAVAAAAAgAEAAAAAAAVAAEAAgAEAAAAAAAWAAAAAgAEAAAAAAAWAAEAAgAEAAAAAAAXAAAAAgAEAAAAAAAXAAEAAgAEAAAAAAAAAAMAAgAEAAAAAAABAAMAAgAEAAAAAAACAAMAAgAEAAAAAAADAAMAAgAEAAAAAAAEAAMAAgAEAAAAAAAFAAMAAgAEAAAAAAAGAAMAAgAEAAAAAAAHAAMAAgAEAAAAAAAIAAMAAgAEAAAAAAAJAAMAAgAEAAAAAAAKAAMAAgAEAAAAAAALAAMAAgAEAAAAAAAMAAMAAgAEAAAAAAANAAMAAgAEAAAAAAAOAAMAAgAEAAAAAAAPAAMAAgAEAAAAAAAQAAMAAgAEAAAAAAARAAMAAgAEAAAAAAASAAMAAgAEAAAAAAATAAMAAgAEAAAAAAAUAAMAAgAEAAAAAAAVAAMAAgAEAAAAAAAWAAMAAgAEAAAAAAAXAAMAAgAEAAAAAAAYAAMAAgAEAAAAAAAZAAMAAgAEAAAAAAAaAAMAAgAEAAAAAAAbAAMAAgAEAAAAAAAcAAMAAgAEAAAAAAAdAAMAAgAEAAAAAAAfAAMAAgAEAAAAAAAgAAMAAgAEAAAAAAAhAAMAAgAEAAAAAAAiAAMAAgAEAAAAAAAjAAMAAgAEAAAAAAAkAAMAAgAEAAAAAAAlAAMAAgAEAAAAAAAmAAMAAgAEAAAAAAAnAAMAAgAEAAAAAAA=")
tile_set = ExtResource("2_toaym")

[node name="Wizard2" type="Sprite2D" parent="."]
position = Vector2(309, 48)
scale = Vector2(1.90625, 1.86125)
texture = ExtResource("4_wcbnx")

[node name="FrontTileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAASAAMAAgAGAAQAAAAUAAMAAgAGAAQAAAASAAUAAgAGAAEAAAAUAAUAAgAGAAEAAAAAAAMAAgAGAAQAAAACAAMAAgAGAAQAAAAEAAMAAgAGAAQAAAAGAAMAAgAGAAQAAAAIAAMAAgAGAAQAAAAKAAMAAgAGAAQAAAAMAAMAAgAGAAQAAAAOAAMAAgAGAAQAAAAQAAMAAgAGAAQAAAAWAAMAAgAGAAQAAAAYAAMAAgAGAAQAAAAaAAMAAgAGAAQAAAAcAAMAAgAGAAQAAAAeAAMAAgAGAAQAAAAgAAMAAgAGAAQAAAAiAAMAAgAGAAQAAAAkAAMAAgAGAAQAAAAmAAMAAgAGAAQAAAAoAAMAAgAGAAQAAAA=")
tile_set = ExtResource("2_toaym")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = -1
anchor_left = -0.264062
anchor_top = -0.00138889
anchor_right = 1.26563
anchor_bottom = 1.02361
offset_left = 163.0
offset_top = -2.5
offset_right = -157.0
offset_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
metadata/_edit_use_anchors_ = true

[node name="TabContainer" type="TabContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
current_tab = 0

[node name="General" type="TabBar" parent="MarginContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Controls" type="TabBar" parent="MarginContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="SectionLabel" parent="MarginContainer/VBoxContainer" instance=ExtResource("4_586t1")]
custom_minimum_size = Vector2(600, 50)
layout_mode = 2
theme_override_constants/shadow_offset_y = 8
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 48
text = "OPTIONS_BUTTON"
displayed_text = "OPTIONS_BUTTON"

[node name="GeneralVBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="AudioOptionsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GeneralVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GeneralVBoxContainer/AudioOptionsContainer"]
layout_mode = 2

[node name="MusicOptionsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GeneralVBoxContainer/AudioOptionsContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="MusicLabel" type="Label" parent="MarginContainer/VBoxContainer/GeneralVBoxContainer/AudioOptionsContainer/HBoxContainer/MusicOptionsContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 28
text = "MUSIC_LABEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/GeneralVBoxContainer/AudioOptionsContainer/HBoxContainer/MusicOptionsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0

[node name="SfxOptionsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GeneralVBoxContainer/AudioOptionsContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="SFXLabel" type="Label" parent="MarginContainer/VBoxContainer/GeneralVBoxContainer/AudioOptionsContainer/HBoxContainer/SfxOptionsContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 28
text = "SFX_LABEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXVolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/GeneralVBoxContainer/AudioOptionsContainer/HBoxContainer/SfxOptionsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0

[node name="WindowOptionsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GeneralVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GeneralVBoxContainer/WindowOptionsContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="WindowModeVbox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GeneralVBoxContainer/WindowOptionsContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="WindowModeLabel" type="Label" parent="MarginContainer/VBoxContainer/GeneralVBoxContainer/WindowOptionsContainer/HBoxContainer/WindowModeVbox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 28
text = "WINDOW_MODE_LABEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WindowModeButton" parent="MarginContainer/VBoxContainer/GeneralVBoxContainer/WindowOptionsContainer/HBoxContainer/WindowModeVbox" instance=ExtResource("5_ps45w")]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ResolutionModeVbox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GeneralVBoxContainer/WindowOptionsContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="ResolutionLabel" type="Label" parent="MarginContainer/VBoxContainer/GeneralVBoxContainer/WindowOptionsContainer/HBoxContainer/ResolutionModeVbox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 28
text = "RESOLUTION_LABEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResolutionOptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/GeneralVBoxContainer/WindowOptionsContainer/HBoxContainer/ResolutionModeVbox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("6_vx5g5")
alignment = 1

[node name="GraphicsOptionsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GraphicsOptionsContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GraphicsOptionsContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="DmgNumberLabel" type="Label" parent="MarginContainer/VBoxContainer/GraphicsOptionsContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 28
text = "SHOW_DAMAGE_NUMBERS_LABEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShowDmgNumberCheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/GraphicsOptionsContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="LanguageVBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GraphicsOptionsContainer/HBoxContainer"]
layout_mode = 2

[node name="LanguageLabel" type="Label" parent="MarginContainer/VBoxContainer/GraphicsOptionsContainer/HBoxContainer/LanguageVBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 28
text = "LANGUAGE_LABEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LanguageOptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/GraphicsOptionsContainer/HBoxContainer/LanguageVBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("6_vx5g5")
alignment = 1

[node name="BackButton" parent="MarginContainer/VBoxContainer" instance=ExtResource("5_ps45w")]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 28)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "BACK_BUTTON"

[node name="KeybindsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Vignette" parent="." instance=ExtResource("2_y3r0o")]
layer = 3

[node name="SfxSoundPlayerComponent" parent="." instance=ExtResource("8_yn0ed")]
audio_stream_list = Array[AudioStream]([ExtResource("9_2xqmy"), ExtResource("10_qhico"), ExtResource("11_eqgfv"), ExtResource("12_uc3i3"), ExtResource("14_jcnmx"), ExtResource("13_adscb")])

[node name="SFXPercentageLabel" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
offset_left = 403.0
offset_top = 162.0
offset_right = 453.0
offset_bottom = 178.0
size_flags_vertical = 8
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 8
text = "50%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicPercentageLabel" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
offset_left = 199.0
offset_top = 162.0
offset_right = 249.0
offset_bottom = 178.0
size_flags_vertical = 8
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 8
text = "50%"
horizontal_alignment = 1
vertical_alignment = 1
